{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 44,
  "lineage": "cd86d318-3093-22f7-697e-fabdb8a78251",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra26_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097f9cfb3a0260ac1",
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:elastic-ip/eipalloc-097f9cfb3a0260ac1",
            "domain": "vpc",
            "id": "eipalloc-097f9cfb3a0260ac1",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-47-131-114-193.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.131.114.193",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "terra26-nat-eip"
            },
            "tags_all": {
              "Name": "terra26-nat-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_terra26_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:internet-gateway/igw-06f770c17bc0c7d2c",
            "id": "igw-06f770c17bc0c7d2c",
            "owner_id": "730335647752",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "project-terra26-igw"
            },
            "tags_all": {
              "Name": "project-terra26-igw"
            },
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "dependencies": [
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra26_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097f9cfb3a0260ac1",
            "association_id": "eipassoc-084b9568f6bd93dd3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03da84151c34a6f31",
            "network_interface_id": "eni-0b0439dcdc0c83ca0",
            "private_ip": "10.0.1.223",
            "public_ip": "47.131.114.193",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fe2ba8813a0882f7",
            "tags": {
              "Name": "terra26-nat-gateway"
            },
            "tags_all": {
              "Name": "terra26-nat-gateway"
            },
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "dependencies": [
            "aws_eip.terra26_nat_eip",
            "aws_internet_gateway.project_terra26_igw",
            "aws_subnet.public_a",
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:route-table/rtb-0d625e2c2c21a2490",
            "id": "rtb-0d625e2c2c21a2490",
            "owner_id": "730335647752",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03da84151c34a6f31",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra26-private-rt"
            },
            "tags_all": {
              "Name": "terra26-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terra26_nat_eip",
            "aws_internet_gateway.project_terra26_igw",
            "aws_nat_gateway.terra26_nat",
            "aws_subnet.public_a",
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:route-table/rtb-020d763784cf99157",
            "id": "rtb-020d763784cf99157",
            "owner_id": "730335647752",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f770c17bc0c7d2c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra26-public-rt"
            },
            "tags_all": {
              "Name": "terra26-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project_terra26_igw",
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03921449608345224",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0d625e2c2c21a2490",
            "subnet_id": "subnet-0b6d774c6df82ae0a"
          },
          "dependencies": [
            "aws_eip.terra26_nat_eip",
            "aws_internet_gateway.project_terra26_igw",
            "aws_nat_gateway.terra26_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c411784f8ef118a1",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0d625e2c2c21a2490",
            "subnet_id": "subnet-0baa72cd4cd2c6bab"
          },
          "dependencies": [
            "aws_eip.terra26_nat_eip",
            "aws_internet_gateway.project_terra26_igw",
            "aws_nat_gateway.terra26_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a296af607b06883",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-020d763784cf99157",
            "subnet_id": "subnet-0fe2ba8813a0882f7"
          },
          "dependencies": [
            "aws_internet_gateway.project_terra26_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0246579fde0b3b24e",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-020d763784cf99157",
            "subnet_id": "subnet-0ca74b957baa7af9d"
          },
          "dependencies": [
            "aws_internet_gateway.project_terra26_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:subnet/subnet-0b6d774c6df82ae0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d774c6df82ae0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335647752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "terra26-private-a"
            },
            "tags_all": {
              "Name": "terra26-private-a"
            },
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "dependencies": [
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:subnet/subnet-0baa72cd4cd2c6bab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baa72cd4cd2c6bab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335647752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "terra26-private-b"
            },
            "tags_all": {
              "Name": "terra26-private-b"
            },
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "dependencies": [
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:subnet/subnet-0fe2ba8813a0882f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2ba8813a0882f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335647752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "terra26-public-a"
            },
            "tags_all": {
              "Name": "terra26-public-a"
            },
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "dependencies": [
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:subnet/subnet-0ca74b957baa7af9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca74b957baa7af9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335647752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "terra26-public-b"
            },
            "tags_all": {
              "Name": "terra26-public-b"
            },
            "vpc_id": "vpc-0975223ec9de7cb74"
          },
          "dependencies": [
            "aws_vpc.project_terra26_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_terra26_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335647752:vpc/vpc-0975223ec9de7cb74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf638c2de4912fd6",
            "default_route_table_id": "rtb-06b9b413783c1d43d",
            "default_security_group_id": "sg-0e77ac82aafe0315f",
            "dhcp_options_id": "dopt-09c75c55720abf678",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0975223ec9de7cb74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b9b413783c1d43d",
            "owner_id": "730335647752",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "project-terra26-vpc"
            },
            "tags_all": {
              "Name": "project-terra26-vpc"
            }
          }
        }
      ]
    }
  ]
}